z-index fix staging test 3.0

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -226,3 +226,7 @@ strong strong {
 .g-recaptcha ~ .invalid-feedback {
   display: block;
 }
+
+.popup{
+  z-index: 1020;
+}
